<!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context="com.parse.starter.activity.MyListingsPageActivity">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:background="@mipmap/bettertriton"
                android:clickable="false"
                android:backgroundTintMode="screen">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#1A237E"
        android:text="@string/buy_string"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:id="@+id/buyButton"
        android:onClick="buyPage"
        android:layout_above="@+id/sellButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:textSize="30sp"
        android:typeface="monospace" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#1A237E"
        android:text="@string/sell_string"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:id="@+id/sellButton"
        android:onClick="sellPage"
        android:layout_alignParentStart="false"
        android:layout_centerInParent="true"
        android:textSize="30sp"
        android:typeface="monospace" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#1A237E"
        android:text="@string/my_listings_string"
        android:textColor="@android:color/white"
        android:id="@+id/myListingsButton"
        android:onClick="myListingsPage"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/sellButton"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:typeface="monospace"
        android:textStyle="bold" />

</RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
