<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.parse.starter.fragment.ContentMyListingsBuy">

    <!-- TODO: Update blank fragment layout -->
    <!--<TextView android:layout_width="match_parent" android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />-->

    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/buying_list"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>


</FrameLayout>
