...
        android:layout_height="wrap_content"
        android:gravity = "right"
        android:orientation = "horizontal"
        android:weightSum="1">

    <Button
        android:id="@+id/buy_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="15sp"
        android:textSize = "18sp"
        android:text = "Buy"
...
